--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://ibrahim5823.github.io/"
 languageCode = "en-us"
 theme = "almeida-cv"
 title = "Example - CV"
